--- a/style.css
+++ b/style.css
@@ -2,56 +2,69 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    /* background-color: black; */
+    background-color: rgb(159, 156, 156);
   }
-
   body{
     display: grid;
     justify-content: center;
     align-content: center;
     height: 100vh;
   }
-  
-  /* #header{
-    text-align: center;
-    padding: 25px;
-  } */
 
   .container{
     display: grid;
     grid-template-columns:repeat(4,1fr);
-    /* grid-auto-rows: minmax(50px,auto); */
-    /* gap: 20px; */
+    background-color: silver;
     width: 400px;
+    height: 550px;
     gap: 15px;
     border: black solid 2px;
     padding: 15px;
-   
+    border-radius: 20px
     
   }
 
   .display{
-    /* grid-area: display; */
     border: rgb(0, 0, 0) solid 2px;
-    text-align: center;
-    grid-column: span 3;
-    
+    background-color: black;
+    color: aliceblue;
+    text-align:end;
+    grid-column: span 4;
+    font-size: larger;
+    height: 100px;
+    border-radius: 5px;
   }
 
   button{
-    /* margin: 10px 10px; */
     padding: 20px 10px;
-    /* width: 10px; */
-    /* border: black solid 1px; */
-    /* background-color: white; */
+    background-color: rgb(209, 202, 202);
+    box-shadow: 0 0 0.1em #060606, 0 0 0.1em rgb(0, 0, 0),  0 0 0em #ffffff;
   }
 
-  /* #footer{
-    border: black solid;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    text-align: center;
-    padding: 15px;
-  } */
+  button:hover{
+    background-color: whitesmoke;
+  }
+
+  .reset:hover,.backspace:hover{
+    background-color: rgb(255, 102, 0);
+  }
+
+  .reset{
+    background-color: rgba(255, 130, 5, 0.856);
+    color: white;
+    grid-column: span 2;
+  }
+
+  .backspace{
+    background-color: rgba(255, 130, 5, 0.856);
+    color: white;
+    grid-column: span 2;
+  }
+
+  #operator{
+    background-color: GRAY;
+  }
+
+  #operator:hover{
+    background-color: whitesmoke;
+  }
